Added item to html; print product info to console

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
     <div class="item-container">
       <div class="item">
         <!-- code template for a single item will go here -->
+        <h4>Reversible Plaid</h4>
+        <img src="images/reversible-plaid.jpg" alt="Reversible plaid scarf">
+        <p>Price: $26.99</p>
+        <p>Two classic patterns in one great look: This supersoft and cozy reversible scarf instantly doubles your street-style cred. 100% acrylic.</p>
       </div>
     </div>
   </section>
