Set image sizes and added css for items

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Winter Scarves</title>
 
@@ -62,42 +62,88 @@
   
   <section>
     <h2>Scarves</h2>
-
+  
     <div class="item-container">
       <div class="item">
         <!-- code template for a single item will go here -->
         <h4>Reversible Plaid</h4>
-        <img src="images/reversible-plaid.jpg" alt="Reversible plaid scarf" width="200">
+        <img srcset="images/reversible-plaid.jpg 320w, images/reversible-plaid-240w.jpg 240w, images/reversible-plaid-160w.jpg 160w"
+             sizes="(max-width: 800px) 160px, (max-width: 1600px) 240px, (min-width: 1601px) 320px"
+             src="images/reversible-plaid.jpg"
+             alt="Reversible plaid scarf">
+
         <p>Price: $26.99</p>
-        <p>Two classic patterns in one great look</p>
+        <p class="description">Two classic patterns in one great look: This supersoft and cozy reversible scarf instantly doubles your street-style cred. 100% acrylic.</p>
       </div>
       <div class="item">
         <!-- code template for a single item will go here -->
-        <h4>Reversible Plaid</h4>
-        <img src="images/reversible-plaid.jpg" alt="Reversible plaid scarf" width="200">
-        <p>Price: $26.99</p>
-        <p>Two classic patterns in one great look</p>
+        <h4>Wool Cable Knit</h4>
+        <img srcset="images/wool-cable.jpeg 320w, images/wool-cable.jpeg 240w, images/wool-cable.jpeg 160w"
+             sizes="(max-width: 800px) 160px, (max-width: 1600px) 240px, (min-width: 1601px) 320px"
+             src="images/wool-cable.jpeg"
+             alt="Wool cable knit scarf">
+        <p>Price: $49.99</p>
+        <p class="description">Warm yourself with this women's natural cable knit scarf, crafted from 100% Merino wool. Imported.</p>
       </div>
       <div class="item">
         <!-- code template for a single item will go here -->
-        <h4>Reversible Plaid</h4>
-        <img src="images/reversible-plaid.jpg" alt="Reversible plaid scarf" width="200">
-        <p>Price: $26.99</p>
-        <p>Two classic patterns in one great look</p>
+        <h4>Northern Lights</h4>
+        <img srcset="images/northern-lights.jpg 320w, images/northern-lights-240w.jpg 240w, images/northern-lights-160w.jpg 160w"
+             sizes="(max-width: 800px) 160px, (max-width: 1600px) 240px, (min-width: 1601px) 320px"
+             src="images/northern-lights.jpg"
+             alt="Northern lights scarf">
+        <p>Price: $29.99</p>
+        <p class="description">Handmade by women in Agra, sales provide medical and educational support in this remote area of India. Crinkly 100% cotton.</p>
       </div>
       <div class="item">
         <!-- code template for a single item will go here -->
-        <h4>Reversible Plaid</h4>
-        <img src="images/reversible-plaid.jpg" alt="Reversible plaid scarf" width="200">
-        <p>Price: $26.99</p>
-        <p>Two classic patterns in one great look</p>
+        <h4>Ombre Infinity</h4>
+        <img srcset="images/ombre-infinity.jpg 320w, images/ombre-infinity-240w.jpg 240w, images/ombre-infinity-160w.jpg 160w"
+             sizes="(max-width: 800px) 160px, (max-width: 1600px) 240px, (min-width: 1601px) 320px"
+             src="images/ombre-infinity.jpg"
+             alt="Ombre infinity scarf">
+        <p>Price: $11.99</p>
+        <p class="description">A dip-dye effect adds color and dimension to a cozy infinity scarf featuring a soft, chunky knit. 100% acrylic.</p>
       </div>
       <div class="item">
         <!-- code template for a single item will go here -->
-        <h4>Reversible Plaid</h4>
-        <img src="images/reversible-plaid.jpg" alt="Reversible plaid scarf" width="200">
-        <p>Price: $26.99</p>
-        <p>Two classic patterns in one great look</p>
+        <h4>Fringed Plaid</h4>
+        <img srcset="images/fringed-plaid.jpeg 320w, images/fringed-plaid-240w.jpeg 240w, images/fringed-plaid-160w.jpeg 160w"
+             sizes="(max-width: 800px) 160px, (max-width: 1600px) 240px, (min-width: 1601px) 320px"
+             src="images/fringed-plaid.jpeg"
+             alt="Fringed plaid scarf">
+        <p>Price: $18.99</p>
+        <p class="description">Generously sized, extra soft and featuring a dazzling fringe, this scarf is rendered in a versatile gray, black and white plaid. Expertly beat the cold with style. 100% acrylic.</p>
+      </div>
+      <div class="item">
+        <!-- code template for a single item will go here -->
+        <h4>Multi Color</h4>
+        <img srcset="images/multi-color.jpeg 320w, images/multi-color-240w.jpeg 240w, images/multi-color-160w.jpeg 160w"
+             sizes="(max-width: 800px) 160px, (max-width: 1600px) 240px, (min-width: 1601px) 320px"
+             src="images/multi-color.jpeg"
+             alt="Multi color scarf">
+        <p>Price: $22.99</p>
+        <p class="description">The Who What Wear Oversize Color-Block Square Scarf is big, bold, and designed to twist and wrap any way you wish. All the colors of the season are harmonized in this oversize accent, so you can adjust to contrast or match your outfit; soft and lush, it’s your stylish standoff against cold AC and unexpected fall breezes. 100% acrylic</p>
+      </div>
+      <div class="item">
+        <!-- code template for a single item will go here -->
+        <h4>Etro Paisley-Print Silk</h4>
+        <img srcset="images/etro.png 320w, images/etro-240w.png 240w, images/etro-160w.png 160w"
+             sizes="(max-width: 800px) 160px, (max-width: 1600px) 240px, (min-width: 1601px) 320px"
+             src="images/etro.png"
+             alt="Etro silk scarf">
+        <p>Price: $249.99</p>
+        <p class="description">Luxurious silk scarf with subtle paisley pattern. 100% silk</p>
+      </div>
+      <div class="item">
+        <!-- code template for a single item will go here -->
+        <h4>Ashby Twill</h4>
+        <img srcset="images/twill.jpg 320w, images/twill-240w.jpg 240w, images/twill-160w.jpg 160w"
+             sizes="(max-width: 800px) 160px, (max-width: 1600px) 240px, (min-width: 1601px) 320px"
+             src="images/twill.jpg"
+             alt="Twill scarf">
+        <p>Price: $70.99</p>
+        <p class="description">Faribault brings you the Ashby Twill Scarf in Natural. Woven with a 'broken' twill technique, the Ashby Twill Scarf has a slight zigzag texture. Made in USA, this timeless scarf is crafted with luxurious merino wool and finished with heather gray fringe. 100% Merino wool</p>
       </div>
     </div>
   </section>
