--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
       <div class="item">
         <!-- code template for a single item will go here -->
         <h4>Fringed Plaid</h4>
-        <img srcset="images/fringed-plaid.jpeg 320w, images/fringed-plaid-240w.jpeg 240w, images/fringed-plaid-160w.jpeg 160w"
+        <img srcset="images/fringed-plaid.jpg 320w, images/fringed-plaid-240w.jpg 240w, images/fringed-plaid-160w.jpg 160w"
              sizes="(max-width: 800px) 160px, (max-width: 1600px) 240px, (min-width: 1601px) 320px"
-             src="images/fringed-plaid.jpeg"
+             src="images/fringed-plaid.jpg"
              alt="Fringed plaid scarf">
         <p>Price: $18.99</p>
         <p class="description">Generously sized, extra soft and featuring a dazzling fringe, this scarf is rendered in a versatile gray, black and white plaid. Expertly beat the cold with style. 100% acrylic.</p>
@@ -118,7 +118,7 @@
       <div class="item">
         <!-- code template for a single item will go here -->
         <h4>Multi Color</h4>
-        <img srcset="images/multi-color.jpeg 320w, images/multi-color-240w.jpeg 240w, images/multi-color-160w.jpeg 160w"
+        <img srcset="images/multi-color.jpeg 320w, images/multi-color-240w.jpg 240w, images/multi-color-160w.jpg 160w"
              sizes="(max-width: 800px) 160px, (max-width: 1600px) 240px, (min-width: 1601px) 320px"
              src="images/multi-color.jpeg"
              alt="Multi color scarf">
