adding media queries

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="col-md-7">
       <aside>
         <form name="filterForm" onsubmit="print();">
-          <label>Filter By:
+          <label class="filter">Filter By:
             <select name="filter">
               <option value="">Choose One</option>
               <option value="price">Price</option>
