Added add/remove cart button; added sort to filter

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   
     <div class="col-md-7">
       <aside>
-        <form name="filterForm" onsubmit="print();">
+        <form name="filterForm" onsubmit="filterProducts();">
           <label class="filter">Filter By:
             <select name="filter">
               <option value="">Choose One</option>
@@ -71,8 +71,8 @@
              sizes="(max-width: 800px) 160px, (max-width: 1600px) 240px, (min-width: 1601px) 320px"
              src="images/reversible-plaid.jpg"
              alt="Reversible plaid scarf">
-
         <p>Price: $26.99</p>
+        <input type="button" name="addRemoveCart" value="Add/Remove Cart" onclick="addRemoveCart('Reversible Plaid')">
         <p class="description">Two classic patterns in one great look: This supersoft and cozy reversible scarf instantly doubles your street-style cred. 100% acrylic.</p>
       </div>
       <div class="item">
@@ -83,6 +83,7 @@
              src="images/wool-cable.jpeg"
              alt="Wool cable knit scarf">
         <p>Price: $49.99</p>
+        <input type="button" name="addRemoveCart" value="Add/Remove Cart" onclick="addRemoveCart('Wool Cable Knit')">
         <p class="description">Warm yourself with this women's natural cable knit scarf, crafted from 100% Merino wool. Imported.</p>
       </div>
       <div class="item">
@@ -93,6 +94,7 @@
              src="images/northern-lights.jpg"
              alt="Northern lights scarf">
         <p>Price: $29.99</p>
+        <input type="button" name="addRemoveCart" value="Add/Remove Cart" onclick="addRemoveCart('Northern Lights')">
         <p class="description">Handmade by women in Agra, sales provide medical and educational support in this remote area of India. Crinkly 100% cotton.</p>
       </div>
       <div class="item">
@@ -103,6 +105,7 @@
              src="images/ombre-infinity.jpg"
              alt="Ombre infinity scarf">
         <p>Price: $11.99</p>
+        <input type="button" name="addRemoveCart" value="Add/Remove Cart" onclick="addRemoveCart('Ombre Infinity')">
         <p class="description">A dip-dye effect adds color and dimension to a cozy infinity scarf featuring a soft, chunky knit. 100% acrylic.</p>
       </div>
       <div class="item">
@@ -113,6 +116,7 @@
              src="images/fringed-plaid.jpg"
              alt="Fringed plaid scarf">
         <p>Price: $18.99</p>
+        <input type="button" name="addRemoveCart" value="Add/Remove Cart" onclick="addRemoveCart('Fringed Plaid')">
         <p class="description">Generously sized, extra soft and featuring a dazzling fringe, this scarf is rendered in a versatile gray, black and white plaid. Expertly beat the cold with style. 100% acrylic.</p>
       </div>
       <div class="item">
@@ -123,6 +127,7 @@
              src="images/multi-color.jpeg"
              alt="Multi color scarf">
         <p>Price: $22.99</p>
+        <input type="button" name="addRemoveCart" value="Add/Remove Cart" onclick="addRemoveCart('Multi Color')">
         <p class="description">The Who What Wear Oversize Color-Block Square Scarf is big, bold, and designed to twist and wrap any way you wish. All the colors of the season are harmonized in this oversize accent, so you can adjust to contrast or match your outfit; soft and lush, it’s your stylish standoff against cold AC and unexpected fall breezes. 100% acrylic</p>
       </div>
       <div class="item">
@@ -133,6 +138,7 @@
              src="images/etro.png"
              alt="Etro silk scarf">
         <p>Price: $249.99</p>
+        <input type="button" name="addRemoveCart" value="Add/Remove Cart" onclick="addRemoveCart('Etro Paisley-Print Silk')">
         <p class="description">Luxurious silk scarf with subtle paisley pattern. 100% silk</p>
       </div>
       <div class="item">
@@ -143,6 +149,7 @@
              src="images/twill.jpg"
              alt="Twill scarf">
         <p>Price: $70.99</p>
+        <input type="button" name="addRemoveCart" value="Add/Remove Cart" onclick="addRemoveCart('Ashby Twill')">
         <p class="description">Faribault brings you the Ashby Twill Scarf in Natural. Woven with a 'broken' twill technique, the Ashby Twill Scarf has a slight zigzag texture. Made in USA, this timeless scarf is crafted with luxurious merino wool and finished with heather gray fringe. 100% Merino wool</p>
       </div>
     </div>
