Track items in cart

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <li><a href="#">Scarves</a></li>
           <li class="cart-info">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+            <span id="cartTotal"></span>
           </li>
         </ul>
       </nav>
